--- a/1 - Active Link on Page Scroll using Javascript/style.css
+++ b/1 - Active Link on Page Scroll using Javascript/style.css
@@ -45,7 +45,7 @@ header{
     top: 0;
     width: 100%;
     background: #333;
-    padding: 20px 50px;
+    padding: px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -61,6 +61,7 @@ header{
     font-weight: 700;
     color: #fff;
     text-decoration: none;
+
 }
 
 header nav{
@@ -75,4 +76,38 @@ header nav a{
     padding: 12px 20px;
     color: #fff;
     font-weight: 500;
+}
+
+header nav a.active{
+    background: var(--clr);
+    color: #333;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+header nav a.active::before{
+    content: '';
+    position: absolute;
+    left: -20px;
+    bottom: 0;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-bottom-right-radius: 20px;
+    box-shadow: 5px 5px 0 5px var(--clr);
+
+}
+
+
+header nav a.active::after{
+    content: '';
+    position: absolute;
+    right: -20px;
+    bottom: 0;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-bottom-left-radius: 20px;
+    box-shadow: -5px 5px 0 5px var(--clr);
+
 }
