--- a/1 - Active Link on Page Scroll using Javascript/style.css
+++ b/1 - Active Link on Page Scroll using Javascript/style.css
@@ -61,6 +61,8 @@ header{
     font-weight: 700;
     color: #fff;
     text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px 0px 10px 50px;
 
 }
 
