--- a/2 - Netflix Landing Page Website ( Mulan )/style.css
+++ b/2 - Netflix Landing Page Website ( Mulan )/style.css
@@ -65,7 +65,8 @@ header .logo img{
     border: 1px solid rgba(255,255,255,0.5);
     outline : none;
     border-radius: 4px;
-    padding: 0 10px 0 45px
+    padding: 0 10px 0 45px;
+    backdrop-filter: blur(10px);
 }
 
 .search input::placeholder{
@@ -80,4 +81,96 @@ header .logo img{
     padding-right: 10px;
     color: #fff;
     border-right: 1px solid #fff;
+}
+
+.banner{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 0 100px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.banner .bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.content{
+    position: relative;
+    z-index: 1;
+    max-width: 550px;
+}
+
+.movieTitle{
+    max-width: 250px;
+}
+
+.banner .content h4{
+    color: rgba(255,255,255,0.5);
+    font-weight: 500;
+}
+
+.banner .content h4 span{
+    padding: 0 10px;
+    border-right: 1px solid rgba(255,255,255,0.5);
+}
+
+.banner .content h4 span:first-child{
+    padding-left: 0;
+}
+
+.banner .content h4 span:last-child{
+    border-right: none;
+}
+
+.banner .content h4 span i{
+    background: #E50914;
+    color: #fff;
+    padding: 0 8px;
+    display: inline-block;
+    font-style: normal;
+    border-radius: 2px;
+}
+
+.banner .content p{
+    font-size: 1em;
+    font-weight: 300;
+    color: #fff;
+    margin: 10px 0 20px;
+    line-height: 1.5em;
+}
+
+.banner .content .buttons{
+    position: relative;
+}
+
+.banner .content .buttons a{
+    position: relative;
+    display: inline-block;
+    margin-right: 10px;
+    background: #E50914;
+    color: #fff;
+    padding: 6px 20px;
+    text-decoration: none;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+
+.banner .content .buttons a:nth-child(2){
+    background: rgba(0,0,0,0.5);
+    border: 1px solid rgba(255,255,255,0.1);
+}
+
+.banner .content .buttons a:hover:nth-child(2){
+    background: #fff;
+    color: #000;
 }
