Add trailer vedio and setup and style trailer watch button and vedio

--- a/2 - Netflix Landing Page Website ( Mulan )/style.css
+++ b/2 - Netflix Landing Page Website ( Mulan )/style.css
@@ -174,3 +174,56 @@ header .logo img{
     background: #fff;
     color: #000;
 }
+
+.play{
+    position: absolute;
+    bottom : 50px;
+    left: 100px;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-decoration: none ;
+    letter-spacing: 1px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.play img{
+    max-width: 50px;
+    margin-right: 10px;
+}
+
+.trailer{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 100000;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(20px);
+    visibility: hidden;
+    opacity: 0;
+}
+
+.trailer vedio{
+    max-width: 900px;
+    outline: none;
+}
+
+.close{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    filter: invert(1);
+    max-width: 30px;
+    color: #fff;
+    font-size: 2em;
+    cursor: pointer;
+}
