--- a/2 - Netflix Landing Page Website ( Mulan )/style.css
+++ b/2 - Netflix Landing Page Website ( Mulan )/style.css
@@ -201,7 +201,7 @@ header .logo img{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    z-index: 100000;
+    z-index: 1000;
     width: 100%;
     height: 100%;
     display: flex;
@@ -210,6 +210,11 @@ header .logo img{
     backdrop-filter: blur(20px);
     visibility: hidden;
     opacity: 0;
+}
+
+.trailer .active{
+    visibility: visible;
+    opacity: 1;
 }
 
 .trailer vedio{
