--- a/3 - Starbucks Landing Page/style.css
+++ b/3 - Starbucks Landing Page/style.css
@@ -123,6 +123,7 @@ header ul li a{
     display: inline-block;
     margin: 0 20px;
     cursor: pointer;
+    transition: 0.5s;
 }
 
 .thumb li:hover{
@@ -154,4 +155,17 @@ header ul li a{
     display: inline-block;
     margin: 5px 0;
     transform: scale(0.6);
+    filter: invert(1);
+}
+
+/* Cover Circle style */
+
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #017143;
+    clip-path: circle(600px at right 800px);
 }
